# libvirt-gitlab-executor

./: .gitignore  .gitlab-ci.yml  COPYING  README.rst  cleanup.sh  make_base_image.sh  prepare.sh  pyproject.toml  run.sh  setup.py
.github/workflows/: lockdown.yml
host/: prepare.sh
host/playbooks/: main.yml
host/playbooks/files/: call_home.service
host/playbooks/tasks/: gitlab-runner.yml  systemd.yml  users.yml
make_base_image/: make_base_image.sh
make_base_image/playbooks/: main.yml
make_base_image/playbooks/files/: call_home.py
src/provisioner/: __main__.py  application.py  cleanup.py  cloud_init.py  cmdline.py  configmap.py  libvirt_handle.py  logger.py  machine.py  prepare.py  run.py  singleton.py  ssh.py  util.py
